--- a/doc/main.ipynb
+++ b/doc/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "93121273",
    "metadata": {},
    "outputs": [
@@ -10,14 +10,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: opencv-python in /Users/zinozhang/opt/anaconda3/lib/python3.8/site-packages (4.5.4.58)\r\n",
-      "Requirement already satisfied: numpy>=1.17.3 in /Users/zinozhang/opt/anaconda3/lib/python3.8/site-packages (from opencv-python) (1.20.1)\r\n"
+      "Requirement already satisfied: opencv-python in /Users/bohaoma/opt/anaconda3/lib/python3.8/site-packages (4.5.4.58)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /Users/bohaoma/opt/anaconda3/lib/python3.8/site-packages (from opencv-python) (1.20.1)\n",
+      "Collecting tensorflow\n",
+      "  Downloading tensorflow-2.7.0-cp38-cp38-macosx_10_11_x86_64.whl (207.1 MB)\n",
+      "\u001b[K     |████████████████████████████████| 207.1 MB 648 kB/s eta 0:00:01     |█████████████████▉              | 115.1 MB 850 kB/s eta 0:01:49\n",
+      "\u001b[?25hRequirement already satisfied: typing-extensions>=3.6.6 in /Users/bohaoma/opt/anaconda3/lib/python3.8/site-packages (from tensorflow) (3.7.4.3)\n",
+      "Collecting grpcio<2.0,>=1.24.3\n",
+      "  Downloading grpcio-1.41.1-cp38-cp38-macosx_10_10_x86_64.whl (3.9 MB)\n",
+      "\u001b[K     |████████████████████████████████| 3.9 MB 9.2 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: numpy>=1.14.5 in /Users/bohaoma/opt/anaconda3/lib/python3.8/site-packages (from tensorflow) (1.20.1)\n",
+      "Collecting flatbuffers<3.0,>=1.12\n",
+      "  Downloading flatbuffers-2.0-py2.py3-none-any.whl (26 kB)\n",
+      "Collecting keras-preprocessing>=1.1.1\n",
+      "  Downloading Keras_Preprocessing-1.1.2-py2.py3-none-any.whl (42 kB)\n",
+      "\u001b[K     |████████████████████████████████| 42 kB 3.8 MB/s  eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: keras<2.8,>=2.7.0rc0 in /Users/bohaoma/opt/anaconda3/lib/python3.8/site-packages (from tensorflow) (2.7.0)\n",
+      "Collecting gast<0.5.0,>=0.2.1\n",
+      "  Downloading gast-0.4.0-py3-none-any.whl (9.8 kB)\n",
+      "Requirement already satisfied: h5py>=2.9.0 in /Users/bohaoma/opt/anaconda3/lib/python3.8/site-packages (from tensorflow) (2.10.0)\n",
+      "Collecting tensorflow-estimator<2.8,~=2.7.0rc0\n",
+      "  Downloading tensorflow_estimator-2.7.0-py2.py3-none-any.whl (463 kB)\n",
+      "\u001b[K     |████████████████████████████████| 463 kB 12.1 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting google-pasta>=0.1.1\n",
+      "  Downloading google_pasta-0.2.0-py3-none-any.whl (57 kB)\n",
+      "\u001b[K     |████████████████████████████████| 57 kB 10.2 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: six>=1.12.0 in /Users/bohaoma/opt/anaconda3/lib/python3.8/site-packages (from tensorflow) (1.15.0)\n",
+      "Collecting tensorboard~=2.6\n",
+      "  Downloading tensorboard-2.7.0-py3-none-any.whl (5.8 MB)\n",
+      "\u001b[K     |████████████████████████████████| 5.8 MB 8.0 MB/s eta 0:00:011\n",
+      "\u001b[?25hCollecting protobuf>=3.9.2\n",
+      "  Downloading protobuf-3.19.1-cp38-cp38-macosx_10_9_x86_64.whl (1.0 MB)\n",
+      "\u001b[K     |████████████████████████████████| 1.0 MB 11.8 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting tensorflow-io-gcs-filesystem>=0.21.0\n",
+      "  Downloading tensorflow_io_gcs_filesystem-0.21.0-cp38-cp38-macosx_10_14_x86_64.whl (1.6 MB)\n",
+      "\u001b[K     |████████████████████████████████| 1.6 MB 4.2 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting astunparse>=1.6.0\n",
+      "  Downloading astunparse-1.6.3-py2.py3-none-any.whl (12 kB)\n",
+      "Requirement already satisfied: wheel<1.0,>=0.32.0 in /Users/bohaoma/opt/anaconda3/lib/python3.8/site-packages (from tensorflow) (0.36.2)\n",
+      "Requirement already satisfied: wrapt>=1.11.0 in /Users/bohaoma/opt/anaconda3/lib/python3.8/site-packages (from tensorflow) (1.12.1)\n",
+      "Collecting absl-py>=0.4.0\n",
+      "  Downloading absl_py-0.15.0-py3-none-any.whl (132 kB)\n",
+      "\u001b[K     |████████████████████████████████| 132 kB 11.3 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting libclang>=9.0.1\n",
+      "  Downloading libclang-12.0.0-py2.py3-none-macosx_10_9_x86_64.whl (12.2 MB)\n",
+      "\u001b[K     |████████████████████████████████| 12.2 MB 12.8 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting opt-einsum>=2.3.2\n",
+      "  Downloading opt_einsum-3.3.0-py3-none-any.whl (65 kB)\n",
+      "\u001b[K     |████████████████████████████████| 65 kB 8.2 MB/s eta 0:00:011\n",
+      "\u001b[?25hCollecting termcolor>=1.1.0\n",
+      "  Downloading termcolor-1.1.0.tar.gz (3.9 kB)\n",
+      "Collecting google-auth<3,>=1.6.3\n",
+      "  Downloading google_auth-2.3.3-py2.py3-none-any.whl (155 kB)\n",
+      "\u001b[K     |████████████████████████████████| 155 kB 14.9 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: requests<3,>=2.21.0 in /Users/bohaoma/opt/anaconda3/lib/python3.8/site-packages (from tensorboard~=2.6->tensorflow) (2.25.1)\n",
+      "Requirement already satisfied: werkzeug>=0.11.15 in /Users/bohaoma/opt/anaconda3/lib/python3.8/site-packages (from tensorboard~=2.6->tensorflow) (1.0.1)\n",
+      "Collecting markdown>=2.6.8\n",
+      "  Downloading Markdown-3.3.4-py3-none-any.whl (97 kB)\n",
+      "\u001b[K     |████████████████████████████████| 97 kB 12.3 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: setuptools>=41.0.0 in /Users/bohaoma/opt/anaconda3/lib/python3.8/site-packages (from tensorboard~=2.6->tensorflow) (52.0.0.post20210125)\n",
+      "Collecting google-auth-oauthlib<0.5,>=0.4.1\n",
+      "  Downloading google_auth_oauthlib-0.4.6-py2.py3-none-any.whl (18 kB)\n",
+      "Collecting tensorboard-data-server<0.7.0,>=0.6.0\n",
+      "  Downloading tensorboard_data_server-0.6.1-py3-none-macosx_10_9_x86_64.whl (3.5 MB)\n",
+      "\u001b[K     |████████████████████████████████| 3.5 MB 13.3 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting tensorboard-plugin-wit>=1.6.0\n",
+      "  Downloading tensorboard_plugin_wit-1.8.0-py3-none-any.whl (781 kB)\n",
+      "\u001b[K     |████████████████████████████████| 781 kB 3.9 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting pyasn1-modules>=0.2.1\n",
+      "  Downloading pyasn1_modules-0.2.8-py2.py3-none-any.whl (155 kB)\n",
+      "\u001b[K     |████████████████████████████████| 155 kB 11.0 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting rsa<5,>=3.1.4\n",
+      "  Downloading rsa-4.7.2-py3-none-any.whl (34 kB)\n",
+      "Collecting cachetools<5.0,>=2.0.0\n",
+      "  Downloading cachetools-4.2.4-py3-none-any.whl (10 kB)\n",
+      "Collecting requests-oauthlib>=0.7.0\n",
+      "  Downloading requests_oauthlib-1.3.0-py2.py3-none-any.whl (23 kB)\n",
+      "Collecting pyasn1<0.5.0,>=0.4.6\n",
+      "  Downloading pyasn1-0.4.8-py2.py3-none-any.whl (77 kB)\n",
+      "\u001b[K     |████████████████████████████████| 77 kB 10.9 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/bohaoma/opt/anaconda3/lib/python3.8/site-packages (from requests<3,>=2.21.0->tensorboard~=2.6->tensorflow) (1.26.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/bohaoma/opt/anaconda3/lib/python3.8/site-packages (from requests<3,>=2.21.0->tensorboard~=2.6->tensorflow) (2020.12.5)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in /Users/bohaoma/opt/anaconda3/lib/python3.8/site-packages (from requests<3,>=2.21.0->tensorboard~=2.6->tensorflow) (2.10)\n",
+      "Requirement already satisfied: chardet<5,>=3.0.2 in /Users/bohaoma/opt/anaconda3/lib/python3.8/site-packages (from requests<3,>=2.21.0->tensorboard~=2.6->tensorflow) (4.0.0)\n",
+      "Collecting oauthlib>=3.0.0\n",
+      "  Downloading oauthlib-3.1.1-py2.py3-none-any.whl (146 kB)\n",
+      "\u001b[K     |████████████████████████████████| 146 kB 13.1 MB/s eta 0:00:01\n",
+      "\u001b[?25hBuilding wheels for collected packages: termcolor\n",
+      "  Building wheel for termcolor (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for termcolor: filename=termcolor-1.1.0-py3-none-any.whl size=4829 sha256=337fb497f004b31686743cac5cb403002b627c5e23f0fb1550b5f35a6b457246\n",
+      "  Stored in directory: /Users/bohaoma/Library/Caches/pip/wheels/a0/16/9c/5473df82468f958445479c59e784896fa24f4a5fc024b0f501\n",
+      "Successfully built termcolor\n",
+      "Installing collected packages: pyasn1, rsa, pyasn1-modules, oauthlib, cachetools, requests-oauthlib, google-auth, tensorboard-plugin-wit, tensorboard-data-server, protobuf, markdown, grpcio, google-auth-oauthlib, absl-py, termcolor, tensorflow-io-gcs-filesystem, tensorflow-estimator, tensorboard, opt-einsum, libclang, keras-preprocessing, google-pasta, gast, flatbuffers, astunparse, tensorflow\n",
+      "Successfully installed absl-py-0.15.0 astunparse-1.6.3 cachetools-4.2.4 flatbuffers-2.0 gast-0.4.0 google-auth-2.3.3 google-auth-oauthlib-0.4.6 google-pasta-0.2.0 grpcio-1.41.1 keras-preprocessing-1.1.2 libclang-12.0.0 markdown-3.3.4 oauthlib-3.1.1 opt-einsum-3.3.0 protobuf-3.19.1 pyasn1-0.4.8 pyasn1-modules-0.2.8 requests-oauthlib-1.3.0 rsa-4.7.2 tensorboard-2.7.0 tensorboard-data-server-0.6.1 tensorboard-plugin-wit-1.8.0 tensorflow-2.7.0 tensorflow-estimator-2.7.0 tensorflow-io-gcs-filesystem-0.21.0 termcolor-1.1.0\n"
      ]
     }
    ],
    "source": [
     "# Import required packages\n",
     "!pip install opencv-python\n",
+    "!pip install tensorflow\n",
     "import numpy as np\n",
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
@@ -270,7 +362,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f7a59c38e80>"
+       "<matplotlib.image.AxesImage at 0x7fe4c8526be0>"
       ]
      },
      "execution_count": 8,
@@ -300,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "5c24f64f",
    "metadata": {},
    "outputs": [],
@@ -311,12 +403,12 @@
     "#https://www.datacamp.com/community/tutorials/convolutional-neural-networks-python\n",
     "\n",
     "\n",
-    "\n",
+    "import tensorflow as tf\n",
     "import keras\n",
     "from keras.models import Sequential,Input,Model\n",
     "from keras.layers import Dense, Dropout, Flatten\n",
     "from keras.layers import Conv2D, MaxPooling2D\n",
-    "from keras.layers.normalization import BatchNormalization\n",
+    "from keras.layers import LayerNormalization\n",
     "from keras.layers.advanced_activations import LeakyReLU\n",
     "\n",
     "    \n",
@@ -325,10 +417,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "0e7b6296",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_5\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d_15 (Conv2D)          (None, 32, 32, 32)        320       \n",
+      "                                                                 \n",
+      " leaky_re_lu_20 (LeakyReLU)  (None, 32, 32, 32)        0         \n",
+      "                                                                 \n",
+      " max_pooling2d_15 (MaxPoolin  (None, 16, 16, 32)       0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " conv2d_16 (Conv2D)          (None, 16, 16, 64)        18496     \n",
+      "                                                                 \n",
+      " leaky_re_lu_21 (LeakyReLU)  (None, 16, 16, 64)        0         \n",
+      "                                                                 \n",
+      " max_pooling2d_16 (MaxPoolin  (None, 8, 8, 64)         0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " conv2d_17 (Conv2D)          (None, 8, 8, 128)         73856     \n",
+      "                                                                 \n",
+      " leaky_re_lu_22 (LeakyReLU)  (None, 8, 8, 128)         0         \n",
+      "                                                                 \n",
+      " max_pooling2d_17 (MaxPoolin  (None, 4, 4, 128)        0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " flatten_5 (Flatten)         (None, 2048)              0         \n",
+      "                                                                 \n",
+      " dense_10 (Dense)            (None, 128)               262272    \n",
+      "                                                                 \n",
+      " leaky_re_lu_23 (LeakyReLU)  (None, 128)               0         \n",
+      "                                                                 \n",
+      " dense_11 (Dense)            (None, 10)                1290      \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 356,234\n",
+      "Trainable params: 356,234\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'valid_X' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-883d0bd9c75e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0mfashion_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m \u001b[0mfashion_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfashion_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimgs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m10000\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnoisy_labels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m10000\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvalidation_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalid_X\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_label\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'valid_X' is not defined"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "'''\n",
@@ -355,10 +503,10 @@
     "\n",
     "\n",
     "\n",
-    "fashion_model.compile(loss=keras.losses.categorical_crossentropy, optimizer=keras.optimizers.Adam(),metrics=['accuracy'])\n",
+    "fashion_model.compile(loss=keras.losses.categorical_crossentropy, optimizer=tf.keras.optimizers.Adam(),metrics=['accuracy'])\n",
     "\n",
     "fashion_model.summary()\n",
-    "#fashion_train = fashion_model.fit(imgs[10000:], noisy_labels[10000:], batch_size=batch_size,epochs=epochs,verbose=1,validation_data=(valid_X, valid_label))\n",
+    "fashion_train = fashion_model.fit(imgs[10000:], noisy_labels[10000:], batch_size=batch_size,epochs=epochs,verbose=1,validation_data=(valid_X, valid_label))\n",
     "\n",
     "\n",
     "#test_eval = fashion_model.evaluate(test_X, test_Y_one_hot, verbose=0)\n",
