--- a/doc/main.ipynb
+++ b/doc/main.ipynb
@@ -904,6 +904,50 @@
     "- Apply techniques such as $k$-fold cross validation to avoid overfitting;\n",
     "- Any other reasonable strategies."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e038b431",
+   "metadata": {},
+   "source": [
+    "## result to CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cb34e83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_test = 10000\n",
+    "test_labels = np.genfromtxt('../data/test_labels.csv', delimiter=',', dtype=\"int8\")\n",
+    "test_imgs = np.empty((n_test,32,32,3))\n",
+    "name_list = np.empty((n_test))\n",
+    "for i in range(n_test):\n",
+    "    img_fn = f'../data/test_images/test{i+1:05d}.png'\n",
+    "    name_list[i] = f'{i+1:05d}'\n",
+    "    test_imgs[i,:,:,:]=cv2.cvtColor(cv2.imread(img_fn),cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "res1 = evaluation(baseline_model, test_labels, test_imgs)\n",
+    "res2 = evaluation(model_I, test_labels, test_imgs)\n",
+    "res3 = evaluation(model_II, test_labels, test_imgs)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "import pandas as pd \n",
+    "\n",
+    "results = {\n",
+    "    \"Index\":name_list,\n",
+    "    \"Baseline\": res1,\n",
+    "    \"Model I\": res2,\n",
+    "    \"Model II\": res3\n",
+    "}\n",
+    "\n",
+    "results_df = pd.DataFrame(results)\n",
+    "results_df.to_csv(\"../output/label_prediction.csv\")\n"
+   ]
   }
  ],
  "metadata": {
