--- a/doc/main.ipynb
+++ b/doc/main.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "93121273",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +68,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7816de90",
    "metadata": {},
    "source": [
     "## 1. Load the datasets"
@@ -77,7 +75,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bf87909",
    "metadata": {},
    "source": [
     "For the project, we provide a training set with 50000 images in the directory `../data/images/` with:\n",
@@ -88,7 +85,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2acfd2f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +106,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58f0a9eb",
    "metadata": {},
    "source": [
     "For illustration, we present a small subset (of size 8) of the images with their clean and noisy labels in `clean_noisy_trainset`. You are encouraged to explore more characteristics of the label noises on the whole dataset. "
@@ -119,7 +114,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7823b467",
    "metadata": {
     "scrolled": true
    },
@@ -183,7 +177,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d0c6ded",
    "metadata": {},
    "source": [
     "## 2. The predictive model\n",
@@ -193,7 +186,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e21f8380",
    "metadata": {},
    "source": [
     "### 2.1. Baseline Model"
@@ -202,7 +194,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "66db1574",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +222,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0edb567f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +232,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31cf755e",
    "metadata": {},
    "source": [
     "For the convenience of evaluation, we write the following function `predictive_model` that does the label prediction. **For your predictive model, feel free to modify the function, but make sure the function takes an RGB image of numpy.array format with dimension $32\\times32\\times3$  as input, and returns one single label as output.**"
@@ -251,7 +240,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "23cc384b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,16 +259,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "774cd932",
    "metadata": {},
    "source": [
-    "### 2.2. Model I"
+    "### 2.2. Model I\n",
+    "\n",
+    "For model I, we apply a convolutional neural network (CNN) model, which is a common Deep Learning algorithm used for analyzing visual imagery that extracts the feature of images and converts it into lower dimension without losing its characteristics. And we still treat the noisy labels as clean ones.The model improves significantly in terms of prediction accuracy compared to the baseline logistic regression model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Data Preparation**\n",
+    "\n",
+    "In the whole dataset, we have 50000 images with noisy labels, and the first 10000 of them also have clean labels. We split the dataset in such a way that in the training set, we have 48000 images with noisy labels, and in the testing dataset, we have 2000 images with clean labels."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2c2eeab1",
    "metadata": {},
    "outputs": [
     {
@@ -339,9 +336,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Model Building**\n",
+    "\n",
+    "We build a multi-layer network, stacking up each layer by adding them one by one. There are several types of layers included and are constructed as follows: the convolutional layer is our first layer and the core building block of CNN, and the Leaky ReLU activation function which helps the network learn non-linear decision boundaries and fix the problem of dying Rectified Linear Units (ReLUs) is added; The max-pooling layer is used after the convolutional layer to reduce the spatial size (only width and height, not depth); repeat the above structure three times, and then use the Flattening layer to convert the multi-dimensional output into a one-dimensional tensor; the last layer of CNN is Dense layer along with a softmax activation function. The architecture is shown below:\n",
+    "\n",
+    "![img](images/archi.jpg)\n",
+    "\n",
+    "We choose Adam optimizer for gradient calculation and weight optimization. It provides an optimization algorithm that is computationally efficient and has little memory requirement to handle sparse gradients on noisy problems. Then we train the model with the data stated previously.\n",
+    "\n",
+    "- **Results**\n",
+    "\n",
+    "The model shows the accuracy of the validation set is about 0.61. Compared with the accuracy of the training set, which is 0.27, the model is not overfitted. The baseline model we have, logistic regression, has the accuracy of 0.24. CNN model gives a better prediction than baseline model. \n",
+    "We also draw two plots: epoch-validation accuracy and epoch-percentage change. We can see from the plots that when epoch is larger than 10, validation accuracy doesn't change much and neither does the percentage change.  The total running time of the model is 449.475 seconds.\n",
+    "\n",
+    "*Reference: Convolutional Neural Networks in Python with Keras (https://www.datacamp.com/community/tutorials/convolutional-neural-networks-python)*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5c24f64f",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +431,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "04f01592",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +632,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0e7b6296",
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +660,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5d8c930",
    "metadata": {},
    "source": [
     "### 2.3. Model II"
@@ -655,7 +668,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71d05bbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +701,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60dd3891",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +753,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa9ab5ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +832,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57bdb093",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +851,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d63821b9",
    "metadata": {},
    "source": [
     "## 3. Evaluation"
@@ -850,7 +858,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dbd0926",
    "metadata": {},
    "source": [
     "For assessment, we will evaluate your final model on a hidden test dataset with clean labels by the `evaluation` function defined as follows. Although you will not have the access to the test set, the function would be useful for the model developments. For example, you can split the small training set, using one portion for weakly supervised learning and the other for validation purpose. "
@@ -859,7 +866,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec1d43b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +881,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "371252e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +899,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70a315b8",
    "metadata": {},
    "source": [
     "The overall accuracy is $0.24$, which is better than random guess (which should have a accuracy around $0.10$). For the project, you should try to improve the performance by the following strategies:\n",
@@ -907,7 +911,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc7d186b",
    "metadata": {},
    "source": [
     "## result to CSV"
@@ -916,7 +919,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a3bf4fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +976,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
