--- a/doc/main.ipynb
+++ b/doc/main.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 10,
    "id": "0cddbd76",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"..\")\n",
+    "sys.path.append(\"../lib\")\n",
     "import os\n",
     "\n",
     "import tensorflow as tf\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "id": "60585da1",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "e8dca0bf",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "id": "230c0ab4",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 5,
    "id": "e5c13f40",
    "metadata": {},
    "outputs": [],
@@ -289,12 +289,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 11,
    "id": "f4b4b50c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lib.model_1 import model_1, train_model_1"
+    "from model_1 import model_1, train_model_1"
    ]
   },
   {
